Fix some more of IntelliJ's warnings